WebCore/platform/StringImpl.cpp
@@ -563,7 +563,7 @@ StringImpl* StringImpl::capitalize(UChar previous) const
         return capitalizedString;
 
     UChar* stringWithPrevious = newUCharVector(m_length + 1);
-    stringWithPrevious[0] = previous;
+    stringWithPrevious[0] = previous == nonBreakingSpace ? ' ' : previous;
     for (unsigned i = 1; i < m_length + 1; i++) {
         // Replace &nbsp with a real space since ICU no longer treats &nbsp as a word separator.
         if (m_data[i - 1] == nonBreakingSpace)
@@ -585,9 +585,9 @@ StringImpl* StringImpl::capitalize(UChar previous) const
     int32_t startOfWord = textBreakFirst(boundary);
     for (endOfWord = textBreakNext(boundary); endOfWord != TextBreakDone; startOfWord = endOfWord, endOfWord = textBreakNext(boundary)) {
         if (startOfWord != 0) // Ignore first char of previous string
-            capitalizedString->m_data[startOfWord - 1] = WTF::Unicode::toTitleCase(stringWithPrevious[startOfWord]);
+            capitalizedString->m_data[startOfWord - 1] = m_data[startOfWord - 1] == nonBreakingSpace ? nonBreakingSpace : WTF::Unicode::toTitleCase(stringWithPrevious[startOfWord]);
         for (int i = startOfWord + 1; i < endOfWord; i++)
-            capitalizedString->m_data[i - 1] = stringWithPrevious[i];
+            capitalizedString->m_data[i - 1] = m_data[i - 1];
     }
 
     deleteUCharVector(stringWithPrevious);
